@@ -1,3 +1,12 @@
+var iconClass = {
+    "edit": "icon-edit",
+    "delete": "icon-trash-o",
+    "duplicate": "icon-files-o",
+    "publish": "icon-thumbs-o-up",
+    "unpublish": "icon-thumbs-down",
+    "view": "icon-eye"
+};
+
 var pagetitleWithButtons = new Ext.XTemplate('<tpl for="."><div class="collections-title-column">'
     +'<h3 class="main-column buttons"><a href="{action_edit}" title="Edit {pagetitle}">{pagetitle}</a></h3>'
     +'<tpl if="actions">'
@@ -17,6 +26,21 @@ var pagetitle = new Ext.XTemplate('<tpl for="."><div class="collections-title-co
     compiled: true
 });
 
+var pagetitleWithIcons = new Ext.XTemplate('<tpl for="."><div class="collections-title-column">'
+    +'<h3 class="main-column buttons"><a href="{action_edit}" title="Edit {pagetitle}">{pagetitle}</a></h3>'
+    +'<tpl if="actions">'
+    +'<ul class="actions">'
+    +'<tpl for="actions">'
+    +'<li><a href="javascript:void(0);" class="controlBtn {className}" title="{text}">'
+    +'<i class="icon icon-fw icon {[ iconClass[values.key] ]}" data-id="{parent.id}" data-action="{values.key}"></i>{[ iconClass[values.key] ? "":values.text ]}'
+    +'</a></li>'
+    +'</tpl>'
+    +'</ul>'
+    +'</tpl>'
+    +'</div></tpl>',{
+    compiled: true
+});
+
 Collections.renderer.qtip = function(value, metaData, record, rowIndex, colIndex, store) {
     metaData.attr = 'ext:qtip="' + value + '"';
     return value;
@@ -24,6 +48,10 @@ Collections.renderer.qtip = function(value, metaData, record, rowIndex, colIndex
 
 Collections.renderer.pagetitleWithButtons = function(value, metaData, record, rowIndex, colIndex, store) {
     return pagetitleWithButtons.apply(record.data);
+};
+
+Collections.renderer.pagetitleWithIcons = function(value, metaData, record, rowIndex, colIndex, store) {
+    return pagetitleWithIcons.apply(record.data);
 };
 
 Collections.renderer.pagetitle = function(value, metaData, record, rowIndex, colIndex, store) {
