@@ -1,5 +1,7 @@
 Changelog for Collections.
 
+- Added Collections.renderer.pagetitleWithIcons
+- Improved handler for inline action buttons allowing icons
 - Fix D&D sort when menuindex is set as default sort field
 - Rename String sort type
 
